--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-	"dev": "next dev -p 3010",
-	"build": "next build",
-	"start": "next start -p 3010",
-	"lint": "next lint"
+    "dev": "next dev -p 3010",
+    "build": "next build",
+    "start": "next start -p 3010",
+    "lint": "next lint"
   },
   "dependencies": {
-	"react": "^18",
-	"react-dom": "^18",
-	"next": "14.2.4",
-	"lodash": "^4.17.21",
-	"sharp": "^0.33.4"
+    "lodash": "^4.17.21",
+    "next": "14.2.4",
+    "next-intl": "^3.15.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-	"@types/lodash": "^4.17.6",
-	"typescript": "^5",
-	"@types/node": "^20",
-	"@types/react": "^18",
-	"@types/react-dom": "^18",
-	"postcss": "^8",
-	"tailwindcss": "^3.4.1",
-	"eslint": "^8",
-	"eslint-config-next": "14.2.4"
+    "@types/lodash": "^4.17.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
