--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,4 +7,4 @@ updates:
     open-pull-requests-limit: 5
     ignore:
       - dependency-name: "eslint"
-        versions: ["9.8.0", ">=9.8.0"]
+        versions: [">=9.0.0"]
