🛠️ chore: add Prettier configuration and package command
Added `prettier` and `eslint` scripts to package.json:
- `eslint`: runs ESLint with auto-fix option on JS and TS files.
- `prettier`: formats all files using Prettier.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "next dev -p 3010",
     "build": "next build",
     "start": "next start -p 3010",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "just-debounce-it": "^3.2.0",
