--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "jaroc-portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "author": {
-    "name": "Jaro.c",
-    "url": "https://github.com/Jaro-c"
-  },
-  "scripts": {
-    "dev": "next dev -p 3010",
-    "build": "next build",
-    "start": "next start -p 3010",
-    "lint": "next lint",
-    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "prettier": "prettier --write ."
-  },
-  "dependencies": {
-    "just-debounce-it": "^3.2.0",
-    "lodash": "^4.17.21",
-    "next": "14.2.8",
-    "next-intl": "^3.19.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sharp": "^0.33.5",
-    "uuid": "^10.0.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.8",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
-  }
+	"name": "jaroc-portfolio",
+	"version": "1.0.0",
+	"private": true,
+	"author": {
+		"name": "Jaro.c",
+		"url": "https://github.com/Jaro-c"
+	},
+	"scripts": {
+		"dev": "next dev -p 3010",
+		"build": "next build",
+		"start": "next start -p 3010",
+		"lint": "next lint",
+		"eslint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+		"prettier": "prettier --write ."
+	},
+	"dependencies": {
+		"just-debounce-it": "^3.2.0",
+		"lodash": "^4.17.21",
+		"next": "14.2.8",
+		"next-intl": "^3.19.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"sharp": "^0.33.5",
+		"uuid": "^10.0.0"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4.17.7",
+		"@types/node": "^22.5.4",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"@types/uuid": "^10.0.0",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.2.8",
+		"postcss": "^8.4.45",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.10",
+		"typescript": "^5.5.4"
+	}
 }
